--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "winston": "^3.18.3",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
