--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ CLIENT_URL=
 CLOUDINARY_CLOUD_NAME=dzdbktcxd
 CLOUDINARY_API_KEY=759445488681172
 CLOUDINARY_API_SECRET=sXygiC0Ll9OX1SUglxGKlQpk2z4
-FRONT_URL=https://identizone-main.onrender.com
+FRONT_URL=http://localhost:3000,https://identizone-main.onrender.com
+
 MONGO_URI=mongodb+srv://root:1234@cluster0.pfza56s.mongodb.net/identizone_db?retryWrites=true&w=majority
 
 PORT=5000
